--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#/shelf/
+# Editor-based HTTP Client requests
+#/httpRequests/
+/RustPlaygrounds/.idea/workspace.xml
+/RustPlaygrounds/.idea/httpRequests
+/RustPlaygrounds/.idea/shelf
+/RustPlaygrounds/.idea/
